<resources>
    <!-- App Name -->
    <string name="app_name">AgriBuddy</string>

    <!-- Navigation Strings -->
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_weather">Weather</string>
    <string name="nav_marketplace">Marketplace</string>
    <string name="nav_alerts">Alerts/Notifications</string>
    <string name="nav_profile">Profile/Settings</string>
    <string name="nav_alerts_badge">%d new</string>
    <string name="settings_label">Settings</string>
    <string name="logout_label">Logout</string>

    <!-- Fragment Default Strings -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- Weather Strings -->
    <string name="weather_label">Weather</string>
    <string name="temperature_format">%.1f°C</string>
    <string name="feels_like_format">Feels like: %.1f°C</string>
    <string name="humidity_format">Humidity: %d%%</string>
    <string name="wind_speed_format">Wind: %.1f m/s</string>
    <string name="pressure_format">Pressure: %.1f hPa</string>
    <string name="visibility_format">Visibility: %.1f km</string>
    <string name="sunrise_format">Sunrise: %s</string>

    <!-- Weather Labels -->
    <string name="feels_like_label">Feels Like</string>
    <string name="humidity_label">Humidity</string>
    <string name="wind_label">Wind</string>
    <string name="pressure_label">Pressure</string>
    <string name="visibility_label">Visibility</string>
    <string name="sunrise_label">Sunrise</string>
    <string name="sunset_format">Sunset: %s</string>

    <!-- Weather Icon Descriptions -->
    <string name="weather_icon">Weather icon</string>
    <string name="feels_like_icon">Feels like icon</string>
    <string name="humidity_icon">Humidity icon</string>
    <string name="wind_icon">Wind icon</string>
    <string name="pressure_icon">Pressure icon</string>
    <string name="visibility_icon">Visibility icon</string>
    <string name="sunrise_icon">Sunrise icon</string>


    <!--    User Registrarion-->

    <string name="already_have_account">Already have an account? Login here</string>
    <string name="register_title">Farmer Registration</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_register">Register</string>
    <string name="error_empty_fields">All fields are required.</string>
    <string name="error_password_mismatch">Passwords do not match.</string>
    <string name="registration_success">Registration Successful</string>
    <string name="registration_error">Error: %1$s</string>
    <string name="name_description">Full Name</string>
    <string name="email_description">Email Address</string>
    <string name="password_description">Password (min. 8 characters)</string>
    <string name="confirm_password_description">Confirm Password</string>
    <!-- Empty string for dividers -->
    <string name="empty_divider"></string>


    <!--    Login Page-->


    <string name="login_title">Login</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Enter your password</string>
    <string name="btn_login">Login</string>
    <string name="register_prompt">Don\'t have an account? Register here</string>
    <string name="forgot_password">Forgot password?</string>

    <!--     MarketPlace Fragment-->

    <string name="marketplace">Marketplace</string>
    <string name="search_products">Search for seeds, tools, etc.</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Price</string>
    <string name="post_product">Post Product</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add to Cart</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

        <!--    Settings Page-->

    <string name="change_language">Change Language</string>


</resources>